--- a/index.html
+++ b/index.html
@@ -137,11 +137,12 @@ https://templatemo.com/tm-582-tale-seo-agency
           <div class="row">
             <div class="col-lg-12">
               <div class="section-heading">
-                <h2>We Provide <em>Different Services</em> &amp;
-                  <span>Features</span> For Your Agency
+               
+                <h2>Brindamos <em>Diferentes Servicios</em> &amp;
+                  <span>Enfocados </span> En Pequeñas Empresas
                 </h2>
                 <div class="line-dec"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers eiusmod.</p>
+                <p>Ofrecemos soluciones personalizadas de páginas web para cumplir con las demandas únicas de tu negocio.</p>
               </div>
             </div>
             <div class="col-lg-6 col-sm-6">
@@ -149,7 +150,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 <div class="icon">
                   <img src="assets/images/services-01.jpg" alt="discover SEO" class="templatemo-feature">
                 </div>
-                <h4>Discover More on Latest SEO Trends</h4>
+                <h4>E-commerce</h4>
               </div>
             </div>
             <div class="col-lg-6 col-sm-6">
@@ -157,7 +158,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 <div class="icon">
                   <img src="assets/images/services-02.jpg" alt="data analysis" class="templatemo-feature">
                 </div>
-                <h4>Real-Time Big Data Analysis</h4>
+                <h4>Diseño Web</h4>
               </div>
             </div>
             <div class="col-lg-6 col-sm-6">
@@ -165,7 +166,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 <div class="icon">
                   <img src="assets/images/services-03.jpg" alt="precise data" class="templatemo-feature">
                 </div>
-                <h4>Precise Data Analysis &amp; Prediction</h4>
+                <h4>Desarrollo Móvil</h4>
               </div>
             </div>
             <div class="col-lg-6 col-sm-6">
@@ -173,7 +174,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                 <div class="icon">
                   <img src="assets/images/services-04.jpg" alt="SEO marketing" class="templatemo-feature">
                 </div>
-                <h4>SEO Marketing &amp; Social Media</h4>
+                <h4> Marketing y Redes Sociales</h4>
               </div>
             </div>
           </div>
